crates/vouched/tests/ui/vouched/private_error_visibility.stderr
error[E0603]: enum `PrivateNameVouchedError` is private
  --> tests/ui/vouched/private_error_visibility.rs:12:26
   |
12 |     let _: Option<inner::PrivateNameVouchedError> = None;
   |                          ^^^^^^^^^^^^^^^^^^^^^^^ private enum
   |
note: the enum `PrivateNameVouchedError` is defined here
  --> tests/ui/vouched/private_error_visibility.rs:6:14
   |
6  |     #[derive(Vouched)]
   |              ^^^^^^^
   = note: this error originates in the derive macro `Vouched` (in Nightly builds, run with -Z macro-backtrace for more info)
